@@ -1,5 +1,10 @@
 2024-10-07 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCopt.c:
+	  Optimize out some assignments followed by casts, part of RFE #937.
+
+2024-10-07 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/mcs51/gen.c:
 	  Fix a code generation bug in pointer write (register save/restore order).
 	* src/z80/gen.c:
